[package]
name = "chutes_e2ee_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.11.0-rc.3"
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
hkdf = "0.13.0-rc.3"
js-sys = "0.3.84"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
sha2 = "0.11.0-rc.3"
wasm-bindgen = "0.2.107"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
